Bug 820571: Don't show remote frame on restyles until reflow finished. r=roc

Original work from :roc.
Add check in nsFrameLoader::ShowRemoteFrame() so restyle of subdocument frames
doesn't resize remote content until first reflow finished and size is decided.